--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,3 +58,10 @@ jobs:
       run: |
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+
+
+    - name: Update kube config
+      run: aws eks update-kubeconfig --name andreademo
+
+    - name: Deploy to EKS
+      run:  kubectl apply -f k8s.yaml
