--- a/k8s.yaml
+++ b/k8s.yaml
@@ -6,7 +6,7 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: myapp
+      app: cicddemo
   template:
     metadata:
       labels:
