--- a/k8s.yaml
+++ b/k8s.yaml
@@ -23,6 +23,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cicddemo-service
+  annotations:
+    # Specify the load balancer scheme as internet-facing to create a public-facing Network Load Balancer (NLB)
+    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
 spec:
   selector:
     app: cicddemo
